# workix

./: ADVANCED_FEATURES_COMPLETE.md  ANALYTICS_DASHBOARD_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  BENCHMARK_REPORT.md  CHAT_FIXED.md  CRUD_PAGES_COMPLETE.md  DB_SCHEMA.docx  DB_SCHEMA_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  ENTERPRISE_MIGRATION_COMPLETE.md  EVERYTHING_WORKING.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_REVAMP_PROGRESS.md  IMPLEMENTATION_COMPLETE.md  NAVIGATION_LINKS_ADDED.md  OFFLINE_IMPLEMENTATION_COMPLETE.md  PARAMETER_CONFLICTS.md  PHASE_4_COMPLETE.md  PROJECT_SUMMARY.md  README.md  SETUP.md  Start-Workix.ps1  TECHNICAL_REFERENCE.md  UI_PAGES_CREATED.md  WEB_ADMIN_COMPLETE.md  WEB_ADMIN_LOGIN_FIXED.md  WEB_ADMIN_READY.md  WORK_ORDER_ENHANCEMENTS.md  mock-api.js  package-lock.json  start-workix.bat  test-analytics-api.ps1  test-analytics.ps1  test-login.ps1  test2.txt
backend/: .gitignore  QUICK_SETUP.md  TEST_ENTERPRISE_USER_MANAGEMENT.ps1  UPDATE_CORS.md  add-sync-columns.js  add-workorder-fk-fields.js  add-workorder-location-fields.js  backend-log.txt  check-data.js  check-db.js  check-tables.js  check-workorder-columns.js  create-missing-tables.js  migrate-enterprise-schema.sql  package.json  reset-passwords.js  run-enterprise-migration.js  seed-complete-data.js  seed-enterprise-data.js  seed-sample-data.js  test-login.js  test-users.js  test-workorder.js  (+1 more)
workix-desktop/src-tauri/: Cargo.toml  tauri.conf.json
workix-desktop/src-tauri/capabilities/: default.json
workix-desktop/src-tauri/src/: lib.rs  main.rs
(+261 files in other folders)
