[package]
name = "workix-desktop"
version = "0.1.0"
description = "Workix - EPC Service Management Platform Desktop App"
authors = ["Workix Team"]
edition = "2021"

[lib]
name = "workix_desktop_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "workix-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"

